# lyric-bot

./: Cargo.toml  Readme.MD
src/: lyrics.rs  main.rs  translation.rs
