[package]
name = "utilbot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version="0.12.12", features=["json"] }
scraper = "0.22.0"
serde = "1.0.217"
serenity = "0.12"
slugify = "0.1.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
ureq = "2.12.1"
